# True-music

./: .gitignore  README.md  clips.json  config.json  main.py  pyproject.toml
test_music/: Snowdreams.mid  confession_night_test.xml  sun_also_rises_intro.xml  twinkle_star.xml  原神登录界面主题曲.mid
true_music/: __init__.py  app.py  audio_processing.py  clip_manager.py  config.py  context.py  fonts.py  matching.py  music_generation.py  pitch.py  score_parser.py  serialization.py  theory.py  ui.py  visualization.py
