[project]
name = "true-music"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "mido>=1.3.3",
    "music21>=9.9.1",
    "numpy>=2.2.6",
    "partitura>=1.7.0",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
]
